feat: reorganizing structure

--- a/newrelic-integration-e2e/resources/docker-compose.yml.tmpl
+++ b/newrelic-integration-e2e/resources/docker-compose.yml.tmpl
@@ -3,7 +3,7 @@ version: '3'
 services:
   agent:
     container_name: newrelic-infra
-    image: newrelic/infrastructure:${INFRA_AGENT_VERISON}
+    image: newrelic/infrastructure:latest
     cap_add:
       - SYS_PTRACE
     network_mode: host
@@ -13,9 +13,9 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/:/host:ro"
       - "./integrations.d:/etc/newrelic-infra/integrations.d"
-      - "./bin/${integration_name}:/var/db/newrelic-infra/newrelic-integrations/bin/${integration_name}"
+      {{range .integrations}}- "./bin/{{.}}:/var/db/newrelic-infra/newrelic-integrations/bin/{{.}}"{{end}}
     restart: unless-stopped
     environment:
       NRIA_VERBOSE: 1
-      NRIA_LICENSE_KEY: "<ADD_NRI_LICENSE_KEY>"
       NRIA_STAGING: "true"
+      NRIA_LICENSE_KEY: {{.licenseKey}}
